[MW] Refactor resource loading utility to not raise checked exceptions